Refactor test code to use updated Application model